# ai-inference-gateway

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20250130_000000_001_create_api_keys.py  20260130_212822_2ac694eb1621_.py  20260205_194646_8556dd51667b_update_schema.py  20260205_195030_9c25349797c5_update_schema.py
app/: auth.py  cache.py  config.py  db.py  deps.py  logging_config.py  main.py  metrics.py  rate_limit.py  redis.py  repositories.py  security.py  settings.py
app/backends/: base.py  circuit_breaker.py  dummy.py  factory.py  gemini_backend.py  local.py  openai_backend.py  router.py
app/models/: __init__.py  api_key.py
frontend/: Dockerfile
frontend/app/: layout.tsx  page.tsx
frontend/components/: ApiKeyGate.tsx  MetadataPanel.tsx  PromptForm.tsx  ResponseCard.tsx
frontend/hooks/: useApiKey.ts  usePredict.ts
frontend/lib/: api.ts  apiClient.ts
frontend/types/: prediction.ts
infra/: docker-compose.yml
scripts/: bootstrap.py  create_api_key.py
