[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-inference-gateway"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.6",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uvicorn]
factory = false