[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-inference-gateway"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    # For monitoring and metrics
    "prometheus-client>=0.15.0",
    "structlog>=22.0.0",

    # AI model providers
    "openai>=1.0.0",
    "google-genai>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uvicorn]
factory = false